--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -13,9 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lizi/opt/anaconda3/envs/cs224n/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3457: DtypeWarning: Columns (3,5,6,22,28,102) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -37,195 +45,64 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>wiki_id</th>\n",
-       "      <th>freebase_id</th>\n",
-       "      <th>title</th>\n",
-       "      <th>author</th>\n",
-       "      <th>date</th>\n",
-       "      <th>genres</th>\n",
-       "      <th>summary</th>\n",
+       "      <th>Artist</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>Lyrics</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>620</td>\n",
-       "      <td>/m/0hhy</td>\n",
-       "      <td>Animal Farm</td>\n",
-       "      <td>George Orwell</td>\n",
-       "      <td>1945-08-17</td>\n",
-       "      <td>{\"/m/016lj8\": \"Roman \\u00e0 clef\", \"/m/06nbt\":...</td>\n",
-       "      <td>Old Major, the old boar on the Manor Farm, ca...</td>\n",
+       "      <td>Gino &amp; Gina</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>(It's Been A Long Time) Pretty Baby Gino &amp; Gin...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>843</td>\n",
-       "      <td>/m/0k36</td>\n",
-       "      <td>A Clockwork Orange</td>\n",
-       "      <td>Anthony Burgess</td>\n",
-       "      <td>1962</td>\n",
-       "      <td>{\"/m/06n90\": \"Science Fiction\", \"/m/0l67h\": \"N...</td>\n",
-       "      <td>Alex, a teenager living in near-future Englan...</td>\n",
+       "      <td>Johnny Mathis</td>\n",
+       "      <td>Vocal</td>\n",
+       "      <td>A certain smile, a certain face Can lead an un...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>986</td>\n",
-       "      <td>/m/0ldx</td>\n",
-       "      <td>The Plague</td>\n",
-       "      <td>Albert Camus</td>\n",
-       "      <td>1947</td>\n",
-       "      <td>{\"/m/02m4t\": \"Existentialism\", \"/m/02xlf\": \"Fi...</td>\n",
-       "      <td>The text of The Plague is divided into five p...</td>\n",
+       "      <td>Jimmy Clanton</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>I've been restless every night Since that nigh...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1756</td>\n",
-       "      <td>/m/0sww</td>\n",
-       "      <td>An Enquiry Concerning Human Understanding</td>\n",
-       "      <td>David Hume</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>The argument of the Enquiry proceeds by a ser...</td>\n",
+       "      <td>Everly Brothers</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>[Intro] Dream, dream, dream, dream Dream, drea...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2080</td>\n",
-       "      <td>/m/0wkt</td>\n",
-       "      <td>A Fire Upon the Deep</td>\n",
-       "      <td>Vernor Vinge</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>{\"/m/03lrw\": \"Hard science fiction\", \"/m/06n90...</td>\n",
-       "      <td>The novel posits that space around the Milky ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16554</th>\n",
-       "      <td>36934824</td>\n",
-       "      <td>/m/0m0p0hr</td>\n",
-       "      <td>Under Wildwood</td>\n",
-       "      <td>Colin Meloy</td>\n",
-       "      <td>2012-09-25</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Prue McKeel, having rescued her brother from ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16555</th>\n",
-       "      <td>37054020</td>\n",
-       "      <td>/m/04f1nbs</td>\n",
-       "      <td>Transfer of Power</td>\n",
-       "      <td>Vince Flynn</td>\n",
-       "      <td>2000-06-01</td>\n",
-       "      <td>{\"/m/01jfsb\": \"Thriller\", \"/m/02xlf\": \"Fiction\"}</td>\n",
-       "      <td>The reader first meets Rapp while he is doing...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16556</th>\n",
-       "      <td>37122323</td>\n",
-       "      <td>/m/0n5236t</td>\n",
-       "      <td>Decoded</td>\n",
-       "      <td>Jay-Z</td>\n",
-       "      <td>2010-11-16</td>\n",
-       "      <td>{\"/m/0xdf\": \"Autobiography\"}</td>\n",
-       "      <td>The book follows very rough chronological ord...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16557</th>\n",
-       "      <td>37132319</td>\n",
-       "      <td>/m/0n4bqb1</td>\n",
-       "      <td>America Again: Re-becoming The Greatness We Ne...</td>\n",
-       "      <td>Stephen Colbert</td>\n",
-       "      <td>2012-10-02</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Colbert addresses topics including Wall Stree...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16558</th>\n",
-       "      <td>37159503</td>\n",
-       "      <td>/m/073nkd</td>\n",
-       "      <td>Poor Folk</td>\n",
-       "      <td>Fyodor Dostoyevsky</td>\n",
-       "      <td>1846</td>\n",
-       "      <td>{\"/m/02ql9\": \"Epistolary novel\", \"/m/014dfn\": ...</td>\n",
-       "      <td>Makar Devushkin and Varvara Dobroselova are s...</td>\n",
+       "      <td>Johnny Cash</td>\n",
+       "      <td>Country</td>\n",
+       "      <td>[Verse] Every time I look at you I fall in lov...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>16559 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        wiki_id freebase_id  \\\n",
-       "0           620     /m/0hhy   \n",
-       "1           843     /m/0k36   \n",
-       "2           986     /m/0ldx   \n",
-       "3          1756     /m/0sww   \n",
-       "4          2080     /m/0wkt   \n",
-       "...         ...         ...   \n",
-       "16554  36934824  /m/0m0p0hr   \n",
-       "16555  37054020  /m/04f1nbs   \n",
-       "16556  37122323  /m/0n5236t   \n",
-       "16557  37132319  /m/0n4bqb1   \n",
-       "16558  37159503   /m/073nkd   \n",
-       "\n",
-       "                                                   title              author  \\\n",
-       "0                                            Animal Farm       George Orwell   \n",
-       "1                                     A Clockwork Orange     Anthony Burgess   \n",
-       "2                                             The Plague        Albert Camus   \n",
-       "3              An Enquiry Concerning Human Understanding          David Hume   \n",
-       "4                                   A Fire Upon the Deep        Vernor Vinge   \n",
-       "...                                                  ...                 ...   \n",
-       "16554                                     Under Wildwood         Colin Meloy   \n",
-       "16555                                  Transfer of Power         Vince Flynn   \n",
-       "16556                                            Decoded               Jay-Z   \n",
-       "16557  America Again: Re-becoming The Greatness We Ne...     Stephen Colbert   \n",
-       "16558                                          Poor Folk  Fyodor Dostoyevsky   \n",
-       "\n",
-       "             date                                             genres  \\\n",
-       "0      1945-08-17  {\"/m/016lj8\": \"Roman \\u00e0 clef\", \"/m/06nbt\":...   \n",
-       "1            1962  {\"/m/06n90\": \"Science Fiction\", \"/m/0l67h\": \"N...   \n",
-       "2            1947  {\"/m/02m4t\": \"Existentialism\", \"/m/02xlf\": \"Fi...   \n",
-       "3             NaN                                                NaN   \n",
-       "4             NaN  {\"/m/03lrw\": \"Hard science fiction\", \"/m/06n90...   \n",
-       "...           ...                                                ...   \n",
-       "16554  2012-09-25                                                NaN   \n",
-       "16555  2000-06-01   {\"/m/01jfsb\": \"Thriller\", \"/m/02xlf\": \"Fiction\"}   \n",
-       "16556  2010-11-16                       {\"/m/0xdf\": \"Autobiography\"}   \n",
-       "16557  2012-10-02                                                NaN   \n",
-       "16558        1846  {\"/m/02ql9\": \"Epistolary novel\", \"/m/014dfn\": ...   \n",
-       "\n",
-       "                                                 summary  \n",
-       "0       Old Major, the old boar on the Manor Farm, ca...  \n",
-       "1       Alex, a teenager living in near-future Englan...  \n",
-       "2       The text of The Plague is divided into five p...  \n",
-       "3       The argument of the Enquiry proceeds by a ser...  \n",
-       "4       The novel posits that space around the Milky ...  \n",
-       "...                                                  ...  \n",
-       "16554   Prue McKeel, having rescued her brother from ...  \n",
-       "16555   The reader first meets Rapp while he is doing...  \n",
-       "16556   The book follows very rough chronological ord...  \n",
-       "16557   Colbert addresses topics including Wall Stree...  \n",
-       "16558   Makar Devushkin and Varvara Dobroselova are s...  \n",
-       "\n",
-       "[16559 rows x 7 columns]"
+       "            Artist    Genre                                             Lyrics\n",
+       "0      Gino & Gina     Rock  (It's Been A Long Time) Pretty Baby Gino & Gin...\n",
+       "1    Johnny Mathis    Vocal  A certain smile, a certain face Can lead an un...\n",
+       "2    Jimmy Clanton     Rock  I've been restless every night Since that nigh...\n",
+       "3  Everly Brothers     Rock  [Intro] Dream, dream, dream, dream Dream, drea...\n",
+       "4      Johnny Cash  Country  [Verse] Every time I look at you I fall in lov..."
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('dataset/booksummaries.txt', sep='\\t', names=['wiki_id', 'freebase_id', 'title', 'author', 'date', 'genres', 'summary'])\n",
-    "df"
+    "df = pd.read_csv('Billboard_100_dataset.csv')#,  names=['wiki_id', 'freebase_id', 'title', 'author', 'date', 'genres', 'summary'])\n",
+    "df = df[['Artist', 'Genre', 'Lyrics']]\n",
+    "df.head()"
    ]
   },
   {
@@ -281,7 +158,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "cs224n",
    "language": "python",
    "name": "python3"
   },
@@ -295,11 +172,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.7.15"
   },
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "c9ee1a34c78e3e5a7c3f1db6ea416f3d1d1833b79701966ecef13b0cf7b9acb1"
    }
   }
  },
