--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,9 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of songs are 23836\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -23,86 +30,56 @@
       "/Users/lizi/opt/anaconda3/envs/cs224n/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3457: DtypeWarning: Columns (3,5,6,22,28,102) have mixed types.Specify dtype option on import or set low_memory=False.\n",
       "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Artist</th>\n",
-       "      <th>Genre</th>\n",
-       "      <th>Lyrics</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Gino &amp; Gina</td>\n",
-       "      <td>Rock</td>\n",
-       "      <td>(It's Been A Long Time) Pretty Baby Gino &amp; Gin...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Johnny Mathis</td>\n",
-       "      <td>Vocal</td>\n",
-       "      <td>A certain smile, a certain face Can lead an un...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Jimmy Clanton</td>\n",
-       "      <td>Rock</td>\n",
-       "      <td>I've been restless every night Since that nigh...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Everly Brothers</td>\n",
-       "      <td>Rock</td>\n",
-       "      <td>[Intro] Dream, dream, dream, dream Dream, drea...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Johnny Cash</td>\n",
-       "      <td>Country</td>\n",
-       "      <td>[Verse] Every time I look at you I fall in lov...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Artist    Genre                                             Lyrics\n",
-       "0      Gino & Gina     Rock  (It's Been A Long Time) Pretty Baby Gino & Gin...\n",
-       "1    Johnny Mathis    Vocal  A certain smile, a certain face Can lead an un...\n",
-       "2    Jimmy Clanton     Rock  I've been restless every night Since that nigh...\n",
-       "3  Everly Brothers     Rock  [Intro] Dream, dream, dream, dream Dream, drea...\n",
-       "4      Johnny Cash  Country  [Verse] Every time I look at you I fall in lov..."
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('Billboard_100_dataset.csv')#,  names=['wiki_id', 'freebase_id', 'title', 'author', 'date', 'genres', 'summary'])\n",
     "df = df[['Artist', 'Genre', 'Lyrics']]\n",
-    "df.head()"
+    "df.rename(columns={'Artist': 'artist', 'Genre':'genre', 'Lyrics':'lyrics'}, inplace = True)\n",
+    "df.head()\n",
+    "print (f'number of songs are {len(df)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cleaning(lyric):\n",
+    "    #clean data \n",
+    "    return lyric"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        (It's Been A Long Time) Pretty Baby Gino & Gin...\n",
+       "1        A certain smile, a certain face Can lead an un...\n",
+       "2        I've been restless every night Since that nigh...\n",
+       "3        [Intro] Dream, dream, dream, dream Dream, drea...\n",
+       "4        [Verse] Every time I look at you I fall in lov...\n",
+       "                               ...                        \n",
+       "23831    [Verse 1: Camila] I ain't worried 'bout nothin...\n",
+       "23832    [Verse 1] It's perfect outside, it's like God ...\n",
+       "23833    [Verse 1] What if, what if we run away? What i...\n",
+       "23834    [Verse 1] I thought we were great You took you...\n",
+       "23835                                                  NaN\n",
+       "Name: lyrics, Length: 23836, dtype: object"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.lyrics"
    ]
   },
   {
