--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -4,19 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mre\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -27,15 +15,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/wq/8n9bg9qs4yj4bzfc3wzs08f80000gn/T/ipykernel_26718/1199159047.py:1: DtypeWarning: Columns (3,5,6,22,28,102) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv('Billboard_100_dataset.csv')#,  names=['wiki_id', 'freebase_id', 'title', 'author', 'date', 'genres', 'summary'])\n"
+      "/Users/lizi/opt/anaconda3/envs/cs224n/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3457: DtypeWarning: Columns (3,5,6,22,28,102) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
      ]
     },
     {
@@ -108,7 +96,7 @@
        "4      Johnny Cash  Country  [Verse] Every time I look at you I fall in lov..."
       ]
      },
-     "execution_count": 85,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +236,7 @@
        "4  [VERSE] Every time I look at you I fall in lov...  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,14 +272,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rock\n",
+      "Vocal\n",
+      "Rock\n",
+      "Rock\n",
+      "Country\n",
+      "Country\n",
+      "Vocal\n",
+      "Folk\n",
+      "Rock\n",
+      "Rock\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _, row in df.iloc[:10].iterrows():\n",
+    "    prow[1])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,9 +323,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "build_dataset(df_train, 'train.txt')\n",
-    "build_dataset(df_valid, 'valid.txt')\n",
-    "build_dataset(df_test, 'test.txt')"
+    "build_dataset(df_train, 'train_.txt')\n",
+    "build_dataset(df_valid, 'valid_.txt')\n",
+    "build_dataset(df_test, 'test_.txt')"
    ]
   },
   {
@@ -330,7 +338,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "cs224n",
    "language": "python",
    "name": "python3"
   },
@@ -344,11 +352,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.7.15"
   },
   "vscode": {
    "interpreter": {
-    "hash": "09843c3d72823ffecb7ca3a4ba73bf928ec259e8cae6d289bdc4c4526572fe4f"
+    "hash": "c9ee1a34c78e3e5a7c3f1db6ea416f3d1d1833b79701966ecef13b0cf7b9acb1"
    }
   }
  },
