added baby model

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -272,60 +272,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rock\n",
-      "Vocal\n",
-      "Rock\n",
-      "Rock\n",
-      "Country\n",
-      "Country\n",
-      "Vocal\n",
-      "Folk\n",
-      "Rock\n",
-      "Rock\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "data = []\n",
     "for _, row in df.iloc[:10].iterrows():\n",
-    "    prow[1])"
+    "    data.append(f\"This is a {row[1]} song by {row[0]}: {row[2]}.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_dataset(df, dest_path):\n",
     "    f = open(dest_path, 'w')\n",
     "    data = ''\n",
-    "    summaries = df['summary'].tolist()\n",
-    "    for summary in summaries:\n",
-    "        summary = str(summary).strip()\n",
-    "        summary = re.sub(r\"\\s\", \" \", summary)\n",
+    "    for _, row in df.iterrows():\n",
+    "        row = f\" This is a {row[1]} song by {row[0]}: {row[2]}.\"\n",
+    "        row = str(row).strip()\n",
+    "        row = re.sub(r\"\\s\", \" \", row)\n",
     "        bos_token = '<BOS>'\n",
     "        eos_token = '<EOS>'\n",
-    "        data += bos_token + ' ' + summary + ' ' + eos_token + '\\n'\n",
+    "        data += bos_token + ' ' + row + ' ' + eos_token + '\\n'\n",
     "        \n",
     "    f.write(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "build_dataset(df_train, 'train_.txt')\n",
-    "build_dataset(df_valid, 'valid_.txt')\n",
-    "build_dataset(df_test, 'test_.txt')"
+    "build_dataset(df_train, 'train.txt')\n",
+    "build_dataset(df_valid, 'valid.txt')\n",
+    "build_dataset(df_test, 'test.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "build_dataset(df_train[:100],'train_baby.txt')\n",
+    "build_dataset(df_valid[:10], 'valid_baby.txt')\n",
+    "build_dataset(df_test[:10], 'test_baby.txt')\n"
    ]
   },
   {
